--- a/modules/ROOT/partials/multi-location/event-bus.adoc
+++ b/modules/ROOT/partials/multi-location/event-bus.adoc
@@ -8,7 +8,7 @@ The Infinite Scale event bus can be configured by a set of environment variables
 
 [NOTE]
 ====
-* If you are using a binary installation as described in xref:depl-examples/minimal-bare-metal.adoc[Minimal Bare Metal Deployment] or xref:depl-examples/bare-metal.adoc[Bare Metal with systemd], the address of the event bus `OCIS_EVENTS_ENDPOINT` is predefined as localhost address without the need for further configuration, but changable on demand.
+* If you are using a binary installation as described in xref:depl-examples/minimal-bare-metal.adoc[Minimal Bare Metal Deployment] or xref:depl-examples/bare-metal.adoc[Bare Metal with systemd], the address of the event bus `OCIS_EVENTS_ENDPOINT` is predefined as localhost address without the need for further configuration, but changeable on demand.
 
 * In case of an orchestrated installation like with Docker or Kubernetes, the event bus must be an external service for scalability like a `Redis Sentinel cluster` or a key-value-store https://docs.nats.io/nats-concepts/jetstream/key-value-store[NATS JetStream]. Both named stores are supported and also used in xref:deployment/services/caching.adoc[Caching and Persistence]. The store used is not part of the Infinite Scale installation and must be separately provided and configured.
 
