--- a/modules/ROOT/pages/deployment/services/env-vars-special-scope.adoc
+++ b/modules/ROOT/pages/deployment/services/env-vars-special-scope.adoc
@@ -19,7 +19,7 @@ Examples:
 // their source is in: https://github.com/owncloud/ocis/blob/master/ocis-pkg/config/config.go
 // at 'type Runtime struct'
 
-The following environment variables are only available when using a binary deployment. For an example see the xref:depl-examples/minimal-bare-metal.adoc[Minimal Bare Metal Deployment]. Read the xref:deployment/services/envvar-types-description.adoc[Environment Variable Types] documentation for important details.
+The following environment variables are only available when using a binary deployment. For additional information read the xref:deployment/general/general-info.adoc#start-infinite-scale[Start Infinite Scale] documentation. Read the xref:deployment/services/envvar-types-description.adoc[Environment Variable Types] documentation for important details.
 
 include::partial$deployment/services/env-and-yaml.adoc[tag=special_envvars]
 
