--- a/modules/ROOT/partials/depl-examples/ubuntu-compose/shared-setup.adoc
+++ b/modules/ROOT/partials/depl-examples/ubuntu-compose/shared-setup.adoc
@@ -322,7 +322,7 @@ Check if the ports 80/443 are open in the firewall configured. You can run a tes
 * `...DNS problem: NXDOMAIN looking up A for...` +
 This points to a DNS resolution problem. Check if the domains entered in the DNS and in the `.env` file match. Note that when using wildcard domains on the DNS, the fixed part must match on both sides.
 
-Whenever you have at this stage a DNS issue or you have used the Letsencrypt staging environment, you will face follow-up issues on a consecutive compose start because the certificate volume now holds invalid data. Therefore, the `cert` volume needs to be deleted:
+If you have a DNS issue at this stage or you have used the Letsencrypt staging environment, you will face follow-up issues on a consecutive compose start because the certificate volume now holds invalid data. Therefore, the `cert` volume needs to be deleted:
 
 .Shut down the deployment
 [source,bash]
@@ -352,7 +352,7 @@ Stopping the compose setup is easy, just issue:
 docker compose down
 ----
 
-For safty reasons, *do not* add the `-v` (volumes) flag to the command as that would delete all volumes including their data. In case deleting volumes is necessary, deleting them selectively is the preferred method, see the section above for an example.
+For safety reasons, *do not* add the `-v` (volumes) flag to the command as that would delete all volumes including their data. If deleting volumes is necessary, deleting them selectively is the preferred method, see the section above for an example.
 
 == Change Settings
  
@@ -457,14 +457,14 @@ To change the admin password from the command line, which you can do at any time
 
 == Volume Migration
 
-This section gives some guidance if you want to migrate the Infinite Scale docker internal volumes to docker volumes using a local path. This can be required like to separate the container from its data or if a high data volume is expected. See additional documentation in the xref:deployment/tips/useful_mount_tip.adoc[Start a Service After a Resource is Mounted] if you want to use network mounts like NFS or iSCSI for the data directory.
+This section gives some guidance if you want to migrate the Infinite Scale docker internal volumes to docker volumes using a local path. For example, this can be required to separate the container from its data or if a high data volume is expected. See additional documentation in the xref:deployment/tips/useful_mount_tip.adoc[Start a Service After a Resource is Mounted] if you want to use network mounts like NFS or iSCSI for the data directory.
 
 * Prepare two directories which will provide the mount point for Infinite Scale `data` and `config`. +
 The example will use the local path `/mnt/data` and `mnt/config`, adapt according your environment.
 
-* For the following steps, the compose setup _must be_ in `up` state, the containers must provide a container ID for copying.
+* For the following steps, the compose setup _must be_ in the `up` state, the containers must provide a container ID for copying.
 
-** Stop the running instance. By doing so, the instance gets stopped but containers are not removed compared when downing it:
+** Stop the running instance. By doing so, the instance gets stopped but containers are not removed compared to when downing it:
 +
 [source,bash]
 ----
@@ -481,7 +481,7 @@ docker cp <CONTAINER ID>:/etc/ocis/. /mnt/config
 docker cp <CONTAINER ID>:/var/lib/ocis/. /mnt/data
 ----
 
-** Change the ownership of the new source folders recursively. This step is _very important_ because the user inside the container is `1000` and will mostly not match the user who copied:
+** Change the ownership of the new source folders recursively. This step is _very important_ because the user inside the container is `1000` and will mostly not match the user who copied the folders:
 +
 [source,bash]
 ----
@@ -510,7 +510,7 @@ OCIS_CONFIG_DIR=/mnt/config
 docker compose up
 ----
 
-** If the containers come up without reporting issues, you have successfully moved your Infinte Scale docker internal volumes to local paths.
+** If the containers come up without reporting issues, you have successfully moved your Infinite Scale docker internal volumes to local paths.
 
 * Finally, you can remove the docker internal volumes for `config` and `data`:
 +
